<resources>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="access">Access</string>
    <string name="application">Application</string>
    <string name="app_name">SimpleTouch</string>
    <string name="authenticating">Authenticating&#8230;</string>

    <string name="cannot_connect_to_device">Cannot connect to device</string>
    <string name="connexion_to_box">Connexion to box</string>
    <string name="connected_successfully">Connected successfully</string>
    <string name="connecting_to_device">Connecting to device&#8230;</string>
    <string name="create_account">Create account</string>
    <string name="create_new_account">Create new account</string>

    <string name="dialog">Dialog</string>
    <string name="disconnecting">Disconnecting&#8230;</string>
    <string name="disconnected_successfully">Disconnected successfully</string>

    <string name="error_adding_contact">Error adding contact</string>
    <string name="end_dialog_title">End of the dialog</string>
    <string name="end_dialog_message">Your partner finished conversation. Dialog screen will be closed</string>

    <string name="finish_dialog">Finish dialog</string>

    <string name="idle_time_before_logout_in_seconds">Idle time before logout (in seconds)</string>
    <string name="invited_you">invited you</string>

    <string name="login">Login</string>
    <string name="login_failed">Login failed</string>
    <string name="login_invalid">Login invalid</string>
    <string name="logout">Logout</string>

    <string name="make_surface_square">Force surface square</string>
    <string name="minimum_3_alphanumeric_characters">Minimum 3 alphanumeric characters</string>
    <string name="my_status">My status</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="ok">OK</string>

    <string name="partners_login">Partner\'s login</string>
    <string name="password">Password</string>
    <string name="passwords_are_not_equals">Passwords are not equals</string>

    <string name="registered_and_authenticated_successfully">Registered and authenticated successfully</string>
    <string name="registering">Registering&#8230;</string>
    <string name="repeat_password">Repeat password</string>

    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="signal_output">Signal output</string>
    <string name="surface">Surface</string>
    <string name="surface_horizontal_size">Horizontal size</string>
    <string name="surface_vertical_size">Vertical size</string>
    <string name="surface_horizontal_position">Horizontal position</string>
    <string name="surface_vertical_position">Vertical position</string>
    <string name="tt_output">Display mode</string>

    <string name="test_my_box">Test my box</string>
    <string name="this_name_is_already_in_use">This name is already in use</string>
    <string name="touch_size">Touch size (in % of screen width)</string>
    <string name="background_image">Background image</string>
    <string name="show_my_touch">Show my touch</string>
    <string name="show_partner_touch">Show partner s touch</string>
    <string name="mode_dialtact">DialTact</string>
    <string name="mode_TT">TouchThrough</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_test_box">Test box</string>
    <string name="title_activity_status">Status</string>
    <string name="title_activity_dialog">Dialog</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_main">Contacts</string>
    <string name="title_activity_bluetooth">Bluetooth</string>
    <string name="title_activity_sign_up">Sign Up</string>

    <string name="unexpected_error_occurred">Unexpected error occurred</string>

    <string name="you_must_connect_to_the_box_firstly">You must connect to the box firstly</string>
    <string name="your_partner_is_here">Your partner is here</string>
    <string name="your_status">Your status</string>
    <string name="your_status_has_been_successfully_updated">Your status has been successfully updated</string>

    <string name="waiting_for_your_partner">Waiting for your partner&#8230;</string>
    <string name="we_will_add_a_contact_once_a_person_logs_in">We will add a contact once a person logs in</string>
</resources>
